ALteradas configurações e namespaces para abrigar outros helpers

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "autoload" : {
         "psr-0" : {
-            "BrazilianStatesHelper\\" : "src/"
+            "BrazilianHelper\\" : "src/"
         }
     },
     "require" : {
