--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     },
     "require" : {
         "php" : ">5.3.2"
-    }
+    },
+    "post-install-cmd": [
+        "rm -rf vendor/andrebian/brazilian-helpers/.git"
+    ]
 }
