feat: updated namespace and autoload to psr-4 Also deprecated psr-0 classes.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
   "autoload": {
     "psr-0": {
       "BrazilianHelper\\": "src/"
+    },
+    "psr-4": {
+      "Andrebian\\BrazilianHelpers\\": "src/"
     }
   },
   "require": {
