--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     }
   },
   "require": {
-    "php": ">5.3.2"
+    "php": ">5.3.2",
+    "zendframework/zend-filter": "@stable"
   },
   "scripts": {
     "post-install-cmd": [
